--- a/src/components/search/index.less
+++ b/src/components/search/index.less
@@ -1,5 +1,9 @@
 .search {
     display: flex;
-    background-color: rgba(131, 163, 182, 0.493);
+    background-color: #83a3b62e;
     border-radius: 100px;
+    transition: all .5s;
+    &:hover {
+        background-color: #83a3b6ab;
+    }
 }
